@@ -2,6 +2,7 @@ Changes from jTDS 0.9
 =========================
 
 11/15/2004 - Alin Sinpalean
+ o Corrected bug [1062395] Empty (but not null) blobs should return byte[0].
  o Applied Mike's fix for bug [1062549] Build fails under java 1.3.
  o Corrected bug [1062198] SecurityException not caught in class
    ConnectionJDBC2 (fix by Andreas Mross - amross).
